# qitan

./: .gitignore  CLAUDE.md  Python_Demo.py  README.md  discuss001.md  discuss001_003.md  discuss001_004.md  discuss002.md  discuss002_001.md  discuss002_003.md  poe.py  pyproject.toml  task.json  task001.json  task003.json
.claude/: settings.local.json
api_qichacha/document/: enterprise_info_verify.md  fuzzy_search.md
api_qichacha/test_result/: [企业信息核验]万达动漫.json  [企业信息核验]北京万达动漫有限公司.json  [企业信息核验]山东中网盾数字服务有限公司.json  [企业模糊搜索]万达动漫.json  [企业模糊搜索]山东中网盾数字.json
backend/: README.md  __init__.py
backend/app/: __init__.py  main.py
backend/app/config/: __init__.py  run_mode.py  scoring.py
backend/app/prompts/: __init__.py  analysis.py  communication.py  extraction.py
backend/app/schemas/: __init__.py  analysis.py  assessment.py  common.py  company.py  enums.py  output.py
backend/app/services/: __init__.py  mock_analyzer.py
backend/app/services/analysis/: __init__.py  company_profile_analyzer.py  recent_development_analyzer.py
backend/app/services/assembly/: __init__.py  output_assembler.py  output_validator.py
backend/app/services/collection/: __init__.py  base.py  news_collector.py  qichacha_client.py  source_router.py  website_collector.py
backend/app/services/context/: __init__.py  context_builder.py
backend/app/services/extraction/: __init__.py  company_profile_extractor.py  development_extractor.py
docs/: API.md  ARCHITECTURE.md  PROMPTS.md  SCHEMA.md  SCORING.md
frontend/: app.js  index.html  style.css
think_log/v0.0.2/: discuss002_002.md
(+21 files in other folders)
